testing/tests/ui/ambiguous-ws-raw.stderr
error: ambiguous whitespace stripping
       use `{#- -#}` to apply the same whitespace stripping on both sides
         --> <source attribute>:1:1
       "{#-#}Y"
 --> tests/ui/ambiguous-ws-raw.rs:4:21
  |
4 | #[template(source = r#"X{#-#}Y"#, ext = "html")]
  |                     ^^^^^^^^^^^^

error: ambiguous whitespace stripping
       use `{#+ +#}` to apply the same whitespace stripping on both sides
         --> <source attribute>:1:1
       "{#+#}Y"
 --> tests/ui/ambiguous-ws-raw.rs:8:21
  |
8 | #[template(source = r#"X{#+#}Y"#, ext = "html")]
  |                     ^^^^^^^^^^^^

error: ambiguous whitespace stripping
       use `{#~ ~#}` to apply the same whitespace stripping on both sides
         --> <source attribute>:1:1
       "{#~#}Y"
  --> tests/ui/ambiguous-ws-raw.rs:12:21
   |
12 | #[template(source = r#"X{#~#}Y"#, ext = "html")]
   |                     ^^^^^^^^^^^^
